ex-mailer: Add sendEmails endpoint
