# docs/swagger.json
@@ -1,7 +1,7 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "Простий сервер для отримання потучного курса USD до UAH.",
+        "description": "Простий сервер для отримання поточного курса USD до UAH.",
         "title": "Exchange Rate API",
         "contact": {},
         "version": "1.0"
@@ -35,9 +35,35 @@
                 }
             }
         },
+        "/sendEmails": {
+            "post": {
+                "description": "Відправити e-mail з поточним курсом на всі підписані електронні пошти.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "subscription"
+                ],
+                "summary": "Відправляти актуальний курс USD до UAH на всі електронні адреси, які були підписані раніше.",
+                "responses": {
+                    "200": {
+                        "description": "E-mail'и відправлено",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/subscribe": {
             "post": {
-                "description": "Запит має перевірити, чи немає данної електронної адреси в поточній базі даних і, в разі її відсутності, записувати її.",
+                "description": "Запит має перевірити, чи немає данної електронної адреси в поточній базі даних і, в разі її відсутності, записати її.",
                 "produces": [
                     "application/json"
                 ],
